fix(rating): Ensure ratings are vertically aligned
ci: Attempt to fix changelog building

ci: Add missing checkout step for changelog generation

ci: Attempt at fixing the changelog

ci: Attempt at fixing the changelog

ci: Fix generating changelog

--- a/assets/scss/components/rating.scss
+++ b/assets/scss/components/rating.scss
@@ -17,10 +17,15 @@
         display: none;
     }
 
-    .small {
+    &.small {
         svg {
             width: 1rem;
             height: 1rem;
+        }
+
+        label {
+            height: 1rem;
+            line-height: 1rem;
         }
     }
 
@@ -29,11 +34,20 @@
             width: 2rem;
             height: 2rem;
         }
+
+        label {
+            height: 2rem;
+            line-height: 2rem;
+        }
     }
 
     label {
         transition: variables.$transition-base;
         color: var(--color-empty-star);
+
+        svg {
+            vertical-align: unset;
+        }
 
         &.half {
             svg {
